--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,14 @@ jobs:
           --health-retries 5
 
     env:
-      DJANGO_DB_NAME: testdb
-      DJANGO_DB_USER: testuser
+      DJANGO_SETTINGS_MODULE: EcommerceBackend.settings
+      DJANGO_DB_NAME:     testdb
+      DJANGO_DB_USER:     testuser
       DJANGO_DB_PASSWORD: testpass
-      DJANGO_DB_HOST: localhost
-      DJANGO_DB_PORT: 5432
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      DJANGO_DB_HOST:     localhost
+      DJANGO_DB_PORT:     5432
+      SONAR_TOKEN:        ${{ secrets.SONAR_TOKEN }}
+
 
     defaults:
       run:
