Adding Github Actions v4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,13 @@ jobs:
           --health-retries 5
 
     env:
+      DB_NAME:         testdb
+      DB_USER:         testuser
+      PASSWORD:        testpass
+      DATABASE_HOST:   localhost
+      DATABASE_PORT:   5432
       DJANGO_SETTINGS_MODULE: EcommerceBackend.settings
-      DJANGO_DB_NAME:     testdb
-      DJANGO_DB_USER:     testuser
-      DJANGO_DB_PASSWORD: testpass
-      DJANGO_DB_HOST:     localhost
-      DJANGO_DB_PORT:     5432
-      SONAR_TOKEN:        ${{ secrets.SONAR_TOKEN }}
+
 
 
     defaults:
