--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
     env:
       DJANGO_SETTINGS_MODULE: EcommerceBackend.settings
-      DB_NAME:       testdb
+      DB_NAME:       test_dsii_ecommerce
       DB_USER:       testuser
       PASSWORD:   testpass
       DATABASE_HOST:       postgres
@@ -72,7 +72,7 @@ jobs:
       - name: Run Django tests with coverage
         run: |
           cd EcommerceBackend
-          pytest
+          pytest --reuse-db 
 
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
