--- a/EcommerceBackend/requirements.txt
+++ b/EcommerceBackend/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.0
 colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==2.3.0
 Django==5.1.2
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
@@ -29,6 +30,7 @@ requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
 stripe==5.5.0
+typing_extensions==4.13.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
