--- a/EcommerceFrontend/package.json
+++ b/EcommerceFrontend/package.json
@@ -2,12 +2,11 @@
   "name": "gradient-able-free-react-admin-template",
   "version": "5.0.0",
   "scripts": {
-    "start": "vite",
-    "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    "test": "jest"
   },
   "dependencies": {
     "@tanem/react-nprogress": "^5.0.51",
