--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,9 +81,9 @@ jobs:
 
       # SonarCloud
       
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        with:
-          projectBaseDir: .
-        env:
-          SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
+      #- name: SonarCloud Scan
+        #uses: SonarSource/sonarcloud-github-action@v2
+        #with:
+         #projectBaseDir: .
+        #env:
+          #SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
