--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,6 @@ sonar.sources=EcommerceBackend,EcommerceFrontend
 sonar.tests=EcommerceBackend/users/tests
 sonar.test.inclusions=**/tests/**/*.py
 sonar.exclusions=**/migrations/**, **/_pycache_/**
+
+sonar.python.coverage.reportPaths=coverage.xml
 #sonar.javascript.lcov.reportPaths=EcommerceFrontend/coverage/lcov.info 
