--- a/EcommerceFrontend/.env
+++ b/EcommerceFrontend/.env
@@ -3,4 +3,5 @@ GENERATE_SOURCEMAP = false
 
 ## Public URL
 PUBLIC_URL= https://codedthemes.com/
-VITE_APP_BASE_NAME= /
+VITE_APP_BASE_NAME= / 
+VITE_BACKEND_URL=https://ecommerce-backend-zm43.onrender.com/
