--- a/EcommerceBackend/requirements.txt
+++ b/EcommerceBackend/requirements.txt
@@ -19,7 +19,7 @@ MarkupSafe==3.0.2
 packaging==24.2
 pillow==11.0.0
 pluggy==1.6.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 pytest==8.3.5
 pytest-django==4.11.1
@@ -35,3 +35,4 @@ tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
 pytest-cov>=4.0.0
+gunicorn==20.1.0
