--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.token=${SONAR_TOKEN}
 
 sonar.python.version=3.11
-sonar.sources=.
+sonar.sources=EcommerceBackend,EcommerceFrontend
 sonar.tests=EcommerceBackend/users/tests, EcommerceFrontend/src/
 sonar.test.inclusions=**/tests/**/*.py, **/src/**/*.test.jsx
 sonar.exclusions=**/migrations/**, **/_pycache_/**
