--- a/EcommerceFrontend/package.json
+++ b/EcommerceFrontend/package.json
@@ -2,7 +2,7 @@
   "name": "gradient-able-free-react-admin-template",
   "version": "5.0.0",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host --open=false",
     "build": "node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
