--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Run Django tests with coverage
         run: |
           cd EcommerceBackend
-          pytest --reuse-db --cov=. --cov-report=xml:coverage.xml
+          pytest --reuse-db --cov=EcommerceBackend --cov-report=xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
@@ -86,10 +86,10 @@ jobs:
 
 
       # SonarCloud
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        with:
-         projectBaseDir: .
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #- name: SonarCloud Scan
+        #uses: SonarSource/sonarcloud-github-action@v2
+        #with:
+         #projectBaseDir: .
+        #env:
+          #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           
