--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,5 @@ sonar.tests=EcommerceBackend/users/, EcommerceFrontend/src/
 sonar.test.inclusions=**/tests/**/*.py, **/src/**/*.test.jsx
 sonar.exclusions=**/migrations/**, **/_pycache_/**
 
-sonar.python.coverage.reportPaths=coverage.xml
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.python.coverage.reportPaths=EcommerceBackend/coverage.xml
+sonar.javascript.lcov.reportPaths=EcommerceFrontend/coverage/lcov.info
