--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,8 @@ jobs:
       - name: Run Django tests with coverage
         run: |
           cd EcommerceBackend
-          pytest --reuse-db --cov=EcommerceBackend --cov-report=xml:coverage.xml
+          coverage run --source=EcommerceBackend manage.py test
+          coverage xml -o coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
