--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,10 @@ jobs:
           coverage run --source=EcommerceBackend manage.py test
           coverage xml -o coverage.xml
           coverage report
+      - name: Fix paths in coverage.xml
+        run: |
+          cd EcommerceBackend
+          sed -i "s|/home/runner/work/DSII_Ecommerce/DSII_Ecommerce/||g" coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
