--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,8 @@ sonar.token=${SONAR_TOKEN}
 sonar.python.version=3.11
 sonar.sources=EcommerceBackend/EcommerceBackend,EcommerceFrontend/src
 sonar.tests=EcommerceBackend/users/tests,EcommerceFrontend/src
-sonar.test.inclusions=**/tests/**/*.py, **/*.test.jsx
-sonar.exclusions=**/migrations/**, **/_pycache_/**
+sonar.test.inclusions=**/tests/**/*.py,**/*.test.jsx
+sonar.exclusions=**/migrations/**,**/__pycache__/**,**/*.test.jsx
 
 sonar.python.coverage.reportPaths=EcommerceBackend/coverage.xml
 sonar.javascript.lcov.reportPaths=EcommerceFrontend/coverage/lcov.info
