Revert "Test for SC"
This reverts commit 01acc2375bb5b81109056c127d41134a9fc54a75.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,7 @@ jobs:
       - name: Run Django tests with coverage
         run: |
           cd EcommerceBackend
-          coverage run --source=EcommerceBackend manage.py test
-          coverage xml -o coverage.xml
+          pytest --reuse-db --cov=EcommerceBackend --cov-report=xml:coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
