--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.token=${SONAR_TOKEN}
 sonar.python.version=3.11
 sonar.sources=EcommerceBackend/EcommerceBackend,EcommerceFrontend/src
 sonar.tests=EcommerceBackend/users/tests,EcommerceFrontend/src
-sonar.test.inclusions=**/tests/**/*.py, **/*.test.jsx
+sonar.test.inclusions=**/tests/**/*.py, **/__tests__/**/*.js, **/*.test.jsx
 sonar.exclusions=**/migrations/**, **/_pycache_/**
 
 sonar.python.coverage.reportPaths=EcommerceBackend/coverage.xml
