--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,9 @@ sonar.host.url=https://sonarcloud.io
 sonar.token=${SONAR_TOKEN}
 
 sonar.python.version=3.11
-sonar.sources=EcommerceBackend/EcommerceBackend,EcommerceFrontend/src
-sonar.tests=EcommerceBackend/Users/tests,EcommerceFrontend/src
-sonar.test.inclusions=**/tests/**/*.py, **/__tests__/**/*.js, **/*.test.jsx
+sonar.sources=EcommerceBackend,EcommerceFrontend
+sonar.tests=EcommerceBackend/users/, EcommerceFrontend/src/
+sonar.test.inclusions=**/tests/**/*.py, **/src/**/*.test.jsx
 sonar.exclusions=**/migrations/**, **/_pycache_/**
 
 sonar.python.coverage.reportPaths=EcommerceBackend/coverage.xml
