Revert "Test for SC 3"
This reverts commit 6ae9e6b19158684b389970a3b6299dec6438cb56.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,11 +84,12 @@ jobs:
           test -f EcommerceBackend/coverage.xml || echo "Warning: Backend coverage not found"
           test -f EcommerceFrontend/coverage/lcov.info || echo "Warning: Frontend coverage not found"
 
+
       # SonarCloud
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        with:
-         projectBaseDir: .
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #- name: SonarCloud Scan
+        #uses: SonarSource/sonarcloud-github-action@v2
+        #with:
+         #projectBaseDir: .
+        #env:
+          #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           
