--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.token=${SONAR_TOKEN}
 
 sonar.python.version=3.11
 sonar.sources=EcommerceBackend,EcommerceFrontend
-sonar.tests=EcommerceBackend/users/, EcommerceFrontend/src/views/auth/login/
+sonar.tests=EcommerceBackend/users/, EcommerceFrontend/src/
 sonar.test.inclusions=**/tests/**/*.py, **/src/**/*.test.jsx
 sonar.exclusions=**/migrations/**, **/_pycache_/**
 
