Test for SC (Jhonnier)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,10 +86,10 @@ jobs:
 
 
       # SonarCloud
-      #- name: SonarCloud Scan
-        #uses: SonarSource/sonarcloud-github-action@v2
-        #with:
-         #projectBaseDir: .
-        #env:
-          #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          projectBaseDir: .
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           
