--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,9 +5,9 @@ sonar.token=${SONAR_TOKEN}
 
 sonar.python.version=3.11
 sonar.sources=EcommerceBackend, EcommerceFrontend
-sonar.tests=EcommerceBackend/users/tests, EcommerceFrontend/src/
+sonar.tests=EcommerceBackend/users/, EcommerceFrontend/src/
 sonar.test.inclusions=**/tests/**/*.py, **/src/**/*.test.jsx
-sonar.exclusions=**/migrations/**, **/_pycache_/**,**/node_modules/**,**/coverage/**
+sonar.exclusions=**/migrations/**, **/_pycache_/**
 
 sonar.python.coverage.reportPaths=EcommerceBackend/coverage.xml
 sonar.javascript.lcov.reportPaths=EcommerceFrontend/coverage/lcov.info
