--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,7 @@ jobs:
 
       - name: Run Django tests with coverage
         run: |
-          cd EcommerceBackend
-          pytest --reuse-db --cov=. --cov-report=xml:coverage.xml
+          pytest EcommerceBackend/ --reuse-db --cov=EcommerceBackend --cov-report=xml:EcommerceBackend/coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
