Revert "Fix coverage report format for Django tests in CI workflow"
This reverts commit 0756d6a6da158eeed59af69be0a7771a3651caaa.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Run Django tests with coverage
         run: |
-          pytest EcommerceBackend/ --reuse-db --cov=EcommerceBackend --cov-report=xml:EcommerceBackend/coverage.xml
+          pytest EcommerceBackend/ --reuse-db --cov=EcommerceBackend --cov-report=EcommerceBackend/coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
