--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,11 @@ jobs:
       - name: Run Django tests with coverage
         run: |
           cd EcommerceBackend
-          pytest --reuse-db --cov=EcommerceBackend --cov-report=xml
+          coverage run --source=EcommerceBackend manage.py test
+          coverage xml -o coverage.xml
+      - name: Fix coverage.xml paths
+        run: |
+          sed -i "s|/home/runner/work/DSII_Ecommerce/DSII_Ecommerce/||g" EcommerceBackend/coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
@@ -78,13 +82,7 @@ jobs:
         run: |
           cd EcommerceFrontend
           npm run test -- --coverage --coverageReporters=lcov
-      # Agrega una validación o manejo de errores
-      - name: Ensure coverage reports exist
-        run: |
-          test -f EcommerceBackend/coverage.xml || echo "Warning: Backend coverage not found"
-          test -f EcommerceFrontend/coverage/lcov.info || echo "Warning: Frontend coverage not found"
-
-
+          
       # SonarCloud
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
