--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,9 +70,11 @@ jobs:
           cd EcommerceBackend
           coverage run --source=EcommerceBackend manage.py test
           coverage xml -o coverage.xml
-      - name: Fix coverage.xml paths
+          coverage report
+      - name: Fix paths in coverage.xml
         run: |
-          sed -i "s|/home/runner/work/DSII_Ecommerce/DSII_Ecommerce/||g" EcommerceBackend/coverage.xml
+          cd EcommerceBackend
+          sed -i "s|/home/runner/work/DSII_Ecommerce/DSII_Ecommerce/||g" coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
