Revert "Test for SC 16"
This reverts commit 684dd2956d2946de9260e60205be4cb23969155d.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,11 +70,9 @@ jobs:
           cd EcommerceBackend
           coverage run --source=EcommerceBackend manage.py test
           coverage xml -o coverage.xml
-          coverage report
-      - name: Fix paths in coverage.xml
+      - name: Fix coverage.xml paths
         run: |
-          cd EcommerceBackend
-          sed -i "s|/home/runner/work/DSII_Ecommerce/DSII_Ecommerce/||g" coverage.xml
+          sed -i "s|/home/runner/work/DSII_Ecommerce/DSII_Ecommerce/||g" EcommerceBackend/coverage.xml
       # Frontend - React + Vite + Jest
       - name: Install frontend dependencies
         run: |
