Adding blue-green deployment feature
Adding blue-green deployment strategy files, and dockerfiles.

--- a/EcommerceFrontend/Dockerfile
+++ b/EcommerceFrontend/Dockerfile
@@ -1,39 +1,18 @@
-# Etapa 1: Construcción de la aplicación
+# Etapa 1: construir la app con Vite
 FROM node:20-alpine AS build
 
-# Establecer el directorio de trabajo
 WORKDIR /app
+COPY . .
+RUN npm install && npm run build
 
-# Copiar archivos necesarios
-COPY package*.json ./
-
-# Instalar dependencias sin ejecutar scripts (más seguro)
-RUN npm install --ignore-scripts
-
-# Copiar solo los archivos y carpetas necesarios
-COPY src ./src
-COPY public ./public
-
-# Construir la aplicación para producción
-RUN npm run build
-
-# Etapa 2: Servir la aplicación con Nginx
+# Etapa 2: servir los archivos estáticos
 FROM nginx:alpine
 
-# Eliminar archivos por defecto de nginx
-RUN rm -rf /usr/share/nginx/html/*
-
-# Copiar archivos generados por el build al directorio público de nginx
+# Copia los archivos construidos a la carpeta que Nginx sirve
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copiar configuración personalizada de nginx si tienes una (opcional)
+# Copia tu configuración de Nginx si tienes una
 # COPY nginx.conf /etc/nginx/nginx.conf
 
-# Usar el usuario no-root de nginx por seguridad
-USER nginx
-
-# Exponer el puerto
 EXPOSE 80
-
-# Comando por defecto para iniciar nginx
 CMD ["nginx", "-g", "daemon off;"]
